// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.os.v1;

import "google/api/field_behavior.proto";
import "validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/os/v1;osv1";

// SecurityFeature describes the security capabilities of a resource.
enum SecurityFeature {
  SECURITY_FEATURE_UNSPECIFIED = 0;
  SECURITY_FEATURE_NONE = 1;
  SECURITY_FEATURE_SECURE_BOOT_AND_FULL_DISK_ENCRYPTION = 2;
}

// OsType describes type of operating system.
enum OsType {
  OS_TYPE_UNSPECIFIED = 0;
  OS_TYPE_MUTABLE = 1;
  OS_TYPE_IMMUTABLE = 2;
}

// OsProviderKind describes "owner" of the OS, that will drive OS provisioning.
enum OsProviderKind {
  OS_PROVIDER_KIND_UNSPECIFIED = 0;
  OS_PROVIDER_KIND_INFRA = 1;
  OS_PROVIDER_KIND_LENOVO = 2;
}

// An OS resource.
message OperatingSystemResource {
  // Resource ID, generated by inventory on Create.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^os-[0-9a-f]{8}$"
      max_bytes: 11
    }
  ];

  // The OS resource's name.
  string name = 2 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
    max_len: 20
  }];

  // The OS resource's CPU architecture.
  string architecture = 3 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    max_len: 20
  }];

  // The OS resource's kernel Command Line Options.
  string kernel_command = 4 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    max_len: 500
  }];

  // The list of OS resource update sources.
  // Should be in 'DEB822 Source Format' for Debian style OSs
  repeated string update_sources = 5 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).repeated.items.string = {
      max_bytes: 4000
      pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*+()\" \\\n]+$"
    }
  ];

  // The URL repository of the OS image.
  string image_url = 6 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    max_len: 500
  }];

  // A unique identifier of the OS image that can be retrieved from the running OS.
  string image_id = 13 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    max_len: 500
  }];

  // SHA256 checksum of the OS resource in hexadecimal representation.
  string sha256 = 7 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      min_len: 64
      max_len: 64
      pattern: "^[a-f0-9]+$"
    }
  ];

  // Name of an OS profile that the OS resource belongs to. Uniquely identifies a family of OS resources.
  string profile_name = 8 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    max_len: 128
  }];

  // Version of OS profile that the OS resource belongs to.
  string profile_version = 12 [(google.api.field_behavior) = OUTPUT_ONLY];
  // Freeform text, OS-dependent. A list of package names, one per line (newline separated). Must not contain version information.
  string installed_packages = 9 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" \\\n]+$"
    max_len: 500000
  }];
  // Indicating if this OS is capable of supporting features like Secure Boot (SB) and Full Disk Encryption (FDE).
  // Immutable after creation.
  SecurityFeature security_feature = 10;

  // Indicating the type of OS (for example, mutable or immutable).
  OsType os_type = 11;

  // Indicating the provider of OS (e.g., Infra or Lenovo).
  OsProviderKind os_provider = 14;

  // The OS resource's unique identifier. Alias of resourceId.
  string os_resource_id = 5001 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^os-[0-9a-f]{8}$"
      max_bytes: 11
    }
  ];

  // // OS image URL. URL of the original installation source.
  string repo_url = 5002 [(validate.rules).string = {
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    max_len: 500
  }];
}
